# ninja

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: NinjaTraderSetup.md  README.md  USAGE.md
src/nt_data/: __init__.py  config.py
src/nt_data/cli/: __init__.py  main.py
src/nt_data/connectors/: __init__.py  ninjatrader_client.py
src/nt_data/models/: __init__.py  bar.py  order_book.py  tick.py
src/nt_data/services/: __init__.py  historical_data_service.py  market_data_service.py  storage_service.py
tests/: test_historical_data_service.py  test_market_data_service.py  test_storage_service.py
